<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="search_track_name_placeholder">Название трека</string>
    <string name="search_track_artist_placeholder">Исполнитель</string>
    <string name="search_track_time_placeholder">3:15</string>
    <string name="search_no_results">Ничего не нашлось</string>
    <string name="search_no_internet">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_no_internet_update_button">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="search_history_clear_button">Очистить историю</string>
    <string name="itunes_api_base_url">https://itunes.apple.com</string>
    <string name="media">Медиатека</string>
    <string name="media_favorites">Избранные треки</string>
    <string name="media_playlists">Плейлисты</string>
    <string name="media_playlists_create">Новый плейлист</string>
    <string name="media_playlists_add">Добавить в плейлист</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="media_no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="media_create_playlist_title">Новый плейлист</string>
    <string name="media_create_playlist_name_placeholder">Название*</string>
    <string name="media_create_playlist_desc_placeholder">Описание</string>
    <string name="media_create_playlist_create_button">Создать</string>
    <string name="media_create_playlist_created">Плейлист %1s создан</string>
    <string name="media_create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="media_create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="media_create_playlist_dialog_button_cancel">Отмена</string>
    <string name="media_create_playlist_dialog_button_finish">Завершить</string>
    <string name="media_edit_playlist_title">Редактировать</string>
    <string name="media_edit_playlist_save_button">Сохранить</string>
    <string name="media_playlists_track_one">трек</string>
    <string name="media_playlists_track_some">трека</string>
    <string name="media_playlists_track_many">треков</string>
    <string name="media_playlist_no_tracks">В этом плейлисте нет треков</string>
    <string name="media_playlist_min_one">минута</string>
    <string name="media_playlist_min_some">минуты</string>
    <string name="media_playlist_min_many">минут</string>
    <string name="media_playlist_share">Поделиться</string>
    <string name="media_playlist_edit">Редактировать информацию</string>
    <string name="media_playlist_delete">Удалить плейлист</string>
    <string name="media_playlist_delete_track_dialog_title">Удалить трек</string>
    <string name="media_playlist_delete_track_dialog_desc">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="media_playlist_delete_track_dialog_confirm">Удалить</string>
    <string name="media_playlist_delete_track_dialog_cancel">Отмена</string>
    <string name="media_playlist_delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="media_playlist_delete_playlist_dialog_desc">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="media_playlist_delete_playlist_dialog_confirm">Удалить</string>
    <string name="media_playlist_delete_playlist_dialog_cancel">Отмена</string>
    <string name="media_playlist_share_empty_message">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="settings">Настройки</string>
    <string name="settings_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_support_email">some.mail@yandex.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="settings_user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="player_track_length">Длительность</string>
    <string name="player_track_collection">Альбом</string>
    <string name="player_track_release_date">Год</string>
    <string name="player_track_primary_genre">Жанр</string>
    <string name="player_track_country">Страна</string>
    <string name="player_track_time_default">00:00</string>
    <string name="player_track_no_preview">Данный трек невозможно воспроизвести</string>
    <string name="player_track_name_placeholder">Название трека</string>
    <string name="player_track_artist_placeholder">Исполнитель</string>
    <string name="player_track_time_placeholder">0:30</string>
    <string name="player_track_length_placeholder">5:35</string>
    <string name="player_track_collection_placeholder">Альбом</string>
    <string name="player_track_release_date_placeholder">1965</string>
    <string name="player_track_primary_genre_placeholder">Жанр</string>
    <string name="player_track_country_placeholder">Страна</string>
    <string name="player_track_added_to_playlist">Добавлено в плейлист %1s</string>
    <string name="player_track_already_in_playlist">Трек уже добавлен в плейлист %1s</string>
</resources>