<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundSecondaryColor"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/title"
            style="@style/FragmentTitleStyle"
            android:text="@string/settings"
            android:textAppearance="@style/FragmentTitleTextAppearance"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/SettingsSwitch"
            android:gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:paddingEnd="10dp"
            android:text="@string/settings_theme" />

        <TextView
            android:id="@+id/share_button"
            style="@style/SettingsItem"
            android:paddingEnd="18dp"
            android:text="@string/settings_share"
            app:drawableEndCompat="@drawable/share_icon" />

        <TextView
            android:id="@+id/support_button"
            style="@style/SettingsItem"
            android:text="@string/settings_support"
            app:drawableEndCompat="@drawable/support_icon" />

        <TextView
            android:id="@+id/user_agreement_button"
            style="@style/SettingsItem"
            android:paddingEnd="21dp"
            android:text="@string/settings_user_agreement"
            app:drawableEndCompat="@drawable/arrow_forward_icon" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>