<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?backgroundSecondaryColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/pd_l" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/pd_l" />

        <ImageView
            android:id="@+id/backPlayerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pd_m"
            android:layout_marginTop="@dimen/pd_m"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="42dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/backPlayerImage"
            app:srcCompat="@drawable/track_placeholder" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pd_l"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/player_track_name_placeholder"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/track_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/player_track_artist_placeholder"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <ImageButton
            android:id="@+id/addPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:srcCompat="@drawable/playlist_add_icon" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:clickable="false"
            app:layout_constraintEnd_toStartOf="@id/addFavoritesButton"
            app:layout_constraintStart_toEndOf="@id/addPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/track_artist"
            app:srcCompat="@drawable/play_icon" />

        <ImageButton
            android:id="@+id/addFavoritesButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:srcCompat="@drawable/favourites_icon" />

        <TextView
            android:id="@+id/track_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/player_track_time_placeholder"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />


        <TextView
            android:id="@+id/track_length"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/pd_m"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center"
            android:text="@string/player_track_length"
            android:textColor="@color/yp_text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/track_length_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_time" />

        <TextView
            android:id="@+id/track_length_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center_vertical|end"
            android:text="@string/player_track_length_placeholder"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_length"
            app:layout_constraintTop_toBottomOf="@id/track_time" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/collectionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="collection" />

        <TextView
            android:id="@+id/track_collection"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center"
            android:text="@string/player_track_collection"
            android:textColor="@color/yp_text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/track_collection_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="collection"
            app:layout_constraintTop_toBottomOf="@id/track_length" />

        <TextView
            android:id="@+id/track_collection_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center_vertical|end"
            android:text="@string/player_track_collection_placeholder"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_collection"
            app:layout_constraintTag="collection"
            app:layout_constraintTop_toBottomOf="@id/track_length_value" />

        <TextView
            android:id="@+id/track_release_date"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center"
            android:text="@string/player_track_release_date"
            android:textColor="@color/yp_text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/track_release_date_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_collection" />

        <TextView
            android:id="@+id/track_release_date_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center_vertical|end"
            android:text="@string/player_track_release_date_placeholder"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_release_date"
            app:layout_constraintTop_toBottomOf="@id/track_collection_value" />

        <TextView
            android:id="@+id/track_primary_genre"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center"
            android:text="@string/player_track_primary_genre"
            android:textColor="@color/yp_text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/track_primary_genre_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_release_date" />

        <TextView
            android:id="@+id/track_primary_genre_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center_vertical|end"
            android:text="@string/player_track_primary_genre_placeholder"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_primary_genre"
            app:layout_constraintTop_toBottomOf="@id/track_release_date_value" />

        <TextView
            android:id="@+id/track_country"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/pd_m"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center"
            android:text="@string/player_track_country"
            android:textColor="@color/yp_text_gray"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/track_country_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_primary_genre"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/track_country_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/pd_m"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="center_vertical|end"
            android:text="@string/player_track_country_placeholder"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/track_country"
            app:layout_constraintTop_toBottomOf="@id/track_primary_genre_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlistAddBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle_bottom_sheet"
        android:maxHeight="600dp"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/yp_light_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/media_playlists_add"
            android:textFontWeight="500"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btnCreatePlaylist"
            style="@style/SearchAdditionalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/media_playlists_create" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>