<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/text_main_black"
            android:textAllCaps="false"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="@dimen/corner_radius_medium"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text_padding"
            app:iconTint="@color/text_main_black" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/text_main_black"
            android:textAllCaps="false"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="@dimen/corner_radius_medium"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text_padding"
            app:iconTint="@color/text_main_black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:baselineAligned="false"
            android:text="@string/settings"
            android:textColor="@color/text_main_black"
            android:textAllCaps="false"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="@dimen/corner_radius_medium"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_text_padding"
            app:iconTint="@color/text_main_black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>