<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal"
    android:paddingHorizontal="13dp"
    android:theme="@style/Theme.SearchResults">

    <ImageView
        android:id="@+id/track_artwork"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginVertical="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/track_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="14dp">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            android:textColor="?textColorPrimary"
            android:textFontWeight="400"
            android:textSize="16sp"
            tools:text="@string/search_track_name_placeholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ys_text_regular"
                android:maxLines="1"
                android:textColor="?textColorSecondary"
                android:textFontWeight="400"
                android:textSize="11sp"
                tools:text="@string/search_track_artist_placeholder" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/property_dot" />

            <TextView
                android:id="@+id/track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_text_regular"
                android:textColor="?textColorSecondary"
                android:textFontWeight="400"
                android:textSize="11sp"
                tools:text="@string/search_track_time_placeholder" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/arrow_forward_icon"
        app:tint="?colorSecondary" />


</LinearLayout>